--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "php-open-source-saver/jwt-auth": "^2.3",
+        "predis/predis": "^2.2",
         "twilio/sdk": "^8.2"
     },
     "require-dev": {
