--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ramsey/uuid": "^4.7",
         "revolution/laravel-google-sheets": "^6.3",
         "spatie/laravel-permission": "^6.3",
+        "thiagoalessio/tesseract_ocr": "^2.13",
         "twilio/sdk": "^8.2",
         "yajra/laravel-datatables": "^9.0",
         "yajra/laravel-datatables-oracle": "^10.0"
